# ZeroLocus64

./: .gitignore  .prettierignore  LICENSE  README.md  specification.md
.github/workflows/: CI.yml  notify-dependents.yml  pages.yml
javascript/: README.md  package-lock.json  package.json
javascript/scripts/: build-pages.mjs  serve-site.mjs
javascript/src/: index.js  presentation.js
javascript/tests/: codec.test.js  helpers.js  presentation.test.js  validation.test.js  vectors.test.js
julia/: Project.toml  README.md
julia/src/: ZeroLocus62.jl  ZeroLocus64.jl
julia/test/: runtests.jl
macaulay2/: README.md  ZeroLocus62.m2
python/: README.md  pyproject.toml
python/src/zerolocus62/: __init__.py
python/src/zerolocus64/: __init__.py
python/tests/: conftest.py  test_codec.py  test_validation.py  test_vectors.py
website/: app.js  index.html  markdown.js  specification.html  specification.js  styles.css  typesetting.js
